public/assets/css/style.css
.section-tab {
  background-color: gray;
  color: white;
}

.custom-navbar {
  background-color: white;
}

.home-container {
  max-width: 750px;
  margin: 150px auto 0;
}

.home-grid {
  display: grid;
  grid-template-columns: minmax(250px auto), 1fr 1fr;
}

.project-grid {
  display: grid;
  grid-template-columns: minmax(250px auto), 1fr 1fr;
  grid-gap: 50px;
  padding: 50px 25px;
  max-width: 1100px;
  margin: auto;

}

.profile-section {
  justify-self: center;
}

.name-section {
  margin: auto;
  text-align: left;
}

.section-label {
  background-color: black;
  width: 50%;
  height: 75px;
  font-size: 50px;
  color: white;
}

.section-label p {
  margin: auto;
  text-align: center;
}

.portfolio-item {
  /* width: 300px; */
  /* margin: 15px; */
  border-radius: 10px;
}

.portfolio-item:hover {
  opacity: .5;
}

.contact-image {
  width: 50px;
}

.navbar-logo {
  font-size: 60px;
  color: gray;
}

.name-text {
  font-size: 50px;
  font-family: 'Ubuntu', sans-serif;
  border-radius: 10px;
}

.job-text {
  font-size: 50px;
  font-family: 'Ubuntu', sans-serif;
  border-radius: 10px;
}

.profile-image {
  height: 300px;
  width: 300px;
  border-radius: 10%;
  opacity: 1;
}

.contact-image:hover {
  transition: 0.70s;
  -webkit-transition: 0.70s;
  -moz-transition: 0.70s;
  -ms-transition: 0.70s;
  -o-transition: 0.70s;
  -webkit-transform: rotate(360deg);
  -moz-transform: rotate(360deg);
  -o-transform: rotate(360deg);
  -ms-transform: rotate(360deg);
  transform: rotate(360deg);
}

@media only screen and (max-width: 600px) {
  .name-text {
    font-size: 40px;
  }

  .job-text {
    font-size: 35px;
  }

  .home-container {
    margin-top: 150px;
  }

  .profile-section {
    text-align: center;
  }

  .name-section {
    text-align: center;
    margin-top: 25px;
    margin-bottom: 50px;
  }
}

